# skrim

./: .gitignore  AI.md  Makefile  deploy.tx  package-lock.json  package.json  program-id-banyan.json  program-ids.json
.agent/workflows/: use-ubuntu-profile.md
api/: package-lock.json  package.json
api/src/: index.ts
api/src/routes/: banyan.ts  crank.ts  lobby.ts  stats.ts
api/src/services/: solana.ts  statsService.ts  subscriptionManager.ts
frontend/: package-lock.json  package.json
frontend/dev-dist/: sw.js
frontend/scripts/: banyan-bot.ts  check-keypair.ts  debug-rpc.ts  get-pubkey.ts  init-banyan.ts  seed-games.ts  setup-manager.ts
frontend/src/: App.tsx  WalletProvider.tsx  i18n.ts  index.css
frontend/src/components/: AirdropButton.tsx  BanyanLogo.tsx  MatchupDisplay.tsx  MatchupPlayer.tsx  MatchupTile.tsx  MoveSubmissionModal.tsx  NetworkSelector.tsx  README.md  Sidebar.tsx  StrategySidebar.tsx  index.ts
frontend/src/config/: programIds.ts
frontend/src/contexts/: GamesContext.tsx  NetworkContext.tsx  ToastContext.tsx
frontend/src/hooks/: useGame.ts
frontend/src/locales/: en.json
frontend/src/pages/: CrankPage.tsx  GameDispatcher.tsx  GamePage.tsx  GreatBanyanPage.tsx  (+6 more)
keys/: ledger-pubkey.txt
programs/great_banyan/: Cargo.toml
programs/idiot_chess/: Cargo.toml
programs/rps/: Cargo.toml
programs/rps/src/: lib.rs
scripts/: build-banyan.sh  build-chess.sh  build.js  deploy-banyan.sh  deploy-chess.sh  deploy.js  deploy.sh  full-functionality-test.ts  program-id-banyan.json  program-id-manager.js  program-ids.json  utils.js
(+20 files in other folders)
