[package]
name = "rps"
version = "0.1.0"
edition = "2021"

[lib]
name = "rps"
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pinocchio = "0.5"
solana-program = "1.18"
constant_time_eq = "=0.3.0"

[features]
no-entrypoint = []

[lints.rust]
unexpected_cfgs = "allow"